Added hero section html and css

--- a/homepage.html
+++ b/homepage.html
@@ -13,10 +13,37 @@
   <script src="https://kit.fontawesome.com/5b97558d7e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <p>Hi, I am</p>
-  <h1>ACM</h1>
-  <h2>Front End Developer based in NYC.</h2>
-  <i class="fab fa-instagram"></i>
+  <div class="homepage">
+    <div class="row">
+      <div class="hero">
+        <p>Hi, I am</p>
+        <h1>ACM</h1>
+        <h2>Front end developer based in NYC.</h2>
+        <a href="/homepage.html#contact" class="primary-link" >Contact me <i class="fas fa-arrow-right"></i></a>
+        <a href="/about.html" class="secondary-link" >About me <i class="fas fa-arrow-right"></i></a>
+      </div> <!-- Hero content ends -->
+    </div> <!-- Hero wrapper ends -->
+    <div class="row">
+      <div class="contact" id="contact">
+        <h3>Contact me!</h3>
+        <p>aileenchany@gmail.com</p>
+        <h3>Let's connect!</h3>
+        <p>Follow me on social media.</p>
+        <ul>
+          <li><i class="fab fa-instagram"></i><br>Instagram</li>
+          <li><i class="fab fa-github"></i><br>GitHub</li>
+          <li><i class="fab fa-linkedin-in"></i><br>LinkedIn</li>
+        </ul>
+      </div> <!-- Contact "me" content ends -->
+    </div> <!-- Contact "me" wrapper ends -->
+    <div class="main-footer">
+        <a href="" target="_blank">ACM</a> 
+        2021 | 
+        <a href="" target="_blank">GitHub</a> 
+        Open-Sourced | Hosted on 
+        <a href="" target="_blank">Netlify</a>
+      </div>
+  </div>
   <div>
     <a href="/">Back to Main</a>
   </div>
