--- a/about.html
+++ b/about.html
@@ -5,36 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="ACM's - Aileen Chan Miranda - Front End Developer Portfolio">
-  <title>ACM - Front End Developer Portfolio | Aileen Chan Miranda</title>
+  <title>ACM - Front End Developer Portfolio | About Me Page</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/src/styles.css" />
   <script src="https://kit.fontawesome.com/5b97558d7e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="container main">
-    <div class="row half-dark">
-      <h1 class="heading-dark">ACM</h1>
-    </div>
-    <div class="enter">
-      <a href="/homepage.html">
-        ENTER
-        <i class="fas fa-arrow-right"></i>
-      </a>
-    </div>
-    <div class="row half-light">
-      <h1 class="heading-light">ACM</h1>
-      <div class="main-footer">
-        <a href="" target="_blank">ACM</a> 
-        2021 | 
-        <a href="" target="_blank">GitHub</a> 
-        Open-Sourced | Hosted on 
-        <a href="" target="_blank">Netlify</a>
-      </div>
-    </div>
-    
+  <h1>HELLO WORLD</h1>
+  <div>
+    <a href="/homepage.html">Back to Homepage</a>
   </div>
 </body>
 </html>
