--- a/homepage.html
+++ b/homepage.html
@@ -26,23 +26,35 @@
     <div class="row">
       <div class="contact" id="contact">
         <h3>Contact me!</h3>
-        <p>aileenchany@gmail.com</p>
+        <a href="mailto:aileenchany@gmail.com">aileenchany@gmail.com</a>
         <h3>Let's connect!</h3>
         <p>Follow me on social media.</p>
-        <ul>
-          <li><i class="fab fa-instagram"></i><br>Instagram</li>
-          <li><i class="fab fa-github"></i><br>GitHub</li>
-          <li><i class="fab fa-linkedin-in"></i><br>LinkedIn</li>
+        <ul class="social-media-links">
+          <li>
+            <a href="https://www.instagram.com/porto_caribe/" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/aileenchany" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
         </ul>
       </div> <!-- Contact "me" content ends -->
     </div> <!-- Contact "me" wrapper ends -->
-    <div class="main-footer">
-        <a href="" target="_blank">ACM</a> 
-        2021 | 
-        <a href="" target="_blank">GitHub</a> 
-        Open-Sourced | Hosted on 
-        <a href="" target="_blank">Netlify</a>
-      </div>
+    <div class="footer">
+      <a href="" target="_blank">ACM</a> 
+      2021 | 
+      <a href="" target="_blank">GitHub</a> 
+      Open-Sourced | Hosted on 
+      <a href="" target="_blank">Netlify</a>
+    </div>
   </div>
   <div>
     <a href="/">Back to Main</a>
