--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <script src="https://kit.fontawesome.com/5b97558d7e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="about" id="top">
+  <div class="container about" id="top">
     <div class="row about-hero">
       <div class="col-3">
         <div class="my-photo"></div>
@@ -45,7 +45,7 @@
           <li>Netlify</li>
           <li>VS Code</li>
         </ul>
-      </div> <!-- Tech Skills content ends -->
+      </div> <!-- Tech Stack content ends -->
       <hr />
       <div class="row design-skills">
         <h3>Design Skills:</h3>
@@ -73,44 +73,44 @@
           <img src="images/coming-soon.png" alt="" />
         </div>
       </div> <!-- Certifications content ends -->
-    </div>
-  </div>
-  <div class="row">
-    <div class="contact" id="contact">
-      <h3>Contact me!</h3>
-      <a href="mailto:aileenchany@gmail.com">aileenchany@gmail.com</a>
-      <h3>Let's connect!</h3>
-      <p>Follow me on social media.</p>
-      <ul class="social-media-links">
-        <li>
-          <a href="https://www.instagram.com/porto_caribe/" target="_blank">
-            <i class="fab fa-instagram"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/aileenchany" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-        </li>
-      </ul>
-    </div> <!-- Contact "me" content ends -->
-  </div> <!-- Contact "me" wrapper ends -->
-  <div class="footer">
-    <a href="" target="_blank">ACM</a> 
-    2021 | 
-    <a href="" target="_blank">GitHub</a> 
-    Open-Sourced | Hosted on 
-    <a href="" target="_blank">Netlify</a>
-  </div>
-  <div>
-    <a href="/homepage.html">Back to Homepage</a>
-    <br/>
-    <a href="/about.html#top">Back to top</a>
-  </div>
+    </div> <!-- Qualifications content ends -->
+    <div class="row footer">
+      <div class="contact" id="contact">
+        <h3>Contact me!</h3>
+        <a href="mailto:aileenchany@gmail.com">aileenchany@gmail.com</a>
+        <h3>Let's connect!</h3>
+        <p>Follow me on social media.</p>
+        <ul class="social-media-links">
+          <li>
+            <a href="https://www.instagram.com/porto_caribe/" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/aileenchany" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+        </ul>
+      </div> <!-- Contact "me" content ends -->
+      <div class="foot-note">
+        <a href="" target="_blank">ACM</a> 
+        2021 | 
+        <a href="" target="_blank">GitHub</a> 
+        Open-Sourced | Hosted on 
+        <a href="" target="_blank">Netlify</a>
+        <br/>
+        <br/>
+        <a href="/">Back to Main</a>
+        <br/>
+        <br/>
+      </div> <!-- Foot-note content ends -->
+    </div> <!-- Footer content ends -->
+  </div> <!-- About container ends -->
 </body>
 </html>
