--- a/homepage.html
+++ b/homepage.html
@@ -13,17 +13,17 @@
   <script src="https://kit.fontawesome.com/5b97558d7e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="homepage">
-    <div class="row">
-      <div class="hero">
-        <p>Hi, I am</p>
-        <h1>ACM</h1>
-        <h2>Front end developer based in NYC.</h2>
+  <div class="container homepage">
+    <div class="row hero">
+      <p>Hi, I am</p>
+      <h1>ACM</h1>
+      <h2>Front end developer based in NYC.</h2>
+      <div class="links">
         <a href="/homepage.html#contact" class="primary-link" >Contact me <i class="fas fa-arrow-right"></i></a>
         <a href="/about.html" class="secondary-link" >About me <i class="fas fa-arrow-right"></i></a>
-      </div> <!-- Hero content ends -->
-    </div> <!-- Hero wrapper ends -->
-    <div class="row">
+      </div>
+    </div> <!-- Hero content ends -->
+    <div class="row footer">
       <div class="contact" id="contact">
         <h3>Contact me!</h3>
         <a href="mailto:aileenchany@gmail.com">aileenchany@gmail.com</a>
@@ -47,17 +47,19 @@
           </li>
         </ul>
       </div> <!-- Contact "me" content ends -->
-    </div> <!-- Contact "me" wrapper ends -->
-    <div class="footer">
-      <a href="" target="_blank">ACM</a> 
-      2021 | 
-      <a href="" target="_blank">GitHub</a> 
-      Open-Sourced | Hosted on 
-      <a href="" target="_blank">Netlify</a>
-    </div>
-  </div>
-  <div>
-    <a href="/">Back to Main</a>
-  </div>
+      <div class="foot-note">
+        <a href="" target="_blank">ACM</a> 
+        2021 | 
+        <a href="" target="_blank">GitHub</a> 
+        Open-Sourced | Hosted on 
+        <a href="" target="_blank">Netlify</a>
+        <br/>
+        <br/>
+        <a href="/">Back to Main</a>
+        <br/>
+        <br/>
+      </div> <!-- Foot-note content ends -->
+    </div> <!-- Footer content ends -->
+  </div> <!-- Homepage container ends -->
 </body>
 </html>
