--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="row half-light">
       <h1 class="heading-light">ACM</h1>
-      <div class="main-footer">
+      <div class="main-foot-note">
         <a href="" target="_blank">ACM</a> 
         2021 | 
         <a href="" target="_blank">GitHub</a> 
