--- a/work.html
+++ b/work.html
@@ -13,45 +13,77 @@
   <script src="https://kit.fontawesome.com/5b97558d7e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="work" id="top">
-    Hello from Work Content
-  </div>
-  <div class="row">
-    <div class="contact" id="contact">
-      <h3>Contact me!</h3>
-      <a href="mailto:aileenchany@gmail.com">aileenchany@gmail.com</a>
-      <h3>Let's connect!</h3>
-      <p>Follow me on social media.</p>
-      <ul class="social-media-links">
-        <li>
-          <a href="https://www.instagram.com/porto_caribe/" target="_blank">
-            <i class="fab fa-instagram"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/aileenchany" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-        </li>
-      </ul>
-    </div> <!-- Contact "me" content ends -->
-  </div> <!-- Contact "me" wrapper ends -->
-  <div class="footer">
-    <a href="" target="_blank">ACM</a> 
-    2021 | 
-    <a href="" target="_blank">GitHub</a> 
-    Open-Sourced | Hosted on 
-    <a href="" target="_blank">Netlify</a>
-  </div>
-  <div>
-    <a href="/homepage.html">Back to Homepage</a>
-    <br/>
-    <a href="/about.html#top">Back to top</a>
-  </div>
+  <div class="container work" id="top">
+    <div class="row">
+      <h1>Frontend Projects</h1>
+    </div>
+    <div class="row project"> <!-- React Weather App Project Content -->
+      <div class="col-4">
+        <!-- Project image -->
+      </div>
+      <div class="col-8">
+        <h3>Project Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h4>Built with:</h4>
+      </div>
+    </div>
+    <div class="row project"> <!-- React Dictionary Project Content -->
+      <div class="col-4">
+        <!-- Project image -->
+      </div>
+      <div class="col-8">
+        <h3>Project Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h4>Built with:</h4>
+      </div>
+    </div>
+    <div class="row project"> <!-- Porto Caribe Project Content -->
+      <div class="col-4">
+        <!-- Project image -->
+      </div>
+      <div class="col-8">
+        <h3>Project Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h4>Built with:</h4>
+      </div>
+    </div>
+    <div class="row footer">
+      <div class="contact" id="contact">
+        <h3>Contact me!</h3>
+        <a href="mailto:aileenchany@gmail.com">aileenchany@gmail.com</a>
+        <h3>Let's connect!</h3>
+        <p>Follow me on social media.</p>
+        <ul class="social-media-links">
+          <li>
+            <a href="https://www.instagram.com/porto_caribe/" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/aileenchany" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+        </ul>
+      </div> <!-- Contact "me" content ends -->
+      <div class="foot-note">
+        <a href="" target="_blank">ACM</a> 
+        2021 | 
+        <a href="" target="_blank">GitHub</a> 
+        Open-Sourced | Hosted on 
+        <a href="" target="_blank">Netlify</a>
+        <br/>
+        <br/>
+        <a href="/">Back to Main</a>
+        <br/>
+        <br/>
+      </div> <!-- Foot-note content ends -->
+    </div> <!-- Footer content ends -->
+  </div> <!-- Work Container content ends-->
 </body>
 </html>
