--- a/about.html
+++ b/about.html
@@ -13,53 +13,56 @@
   <script src="https://kit.fontawesome.com/5b97558d7e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="container about" id="top">
-    <div class="row about-hero">
-      <div class="col-3">
-        <div class="my-photo"></div>
-        <div class="text-center">
-          <a href="/about.html#contact" class="contact-me">Contact me</a>
+  <div class="container-fluid" id="top">
+    <div class="row about-hero justify-content-center align-items-center">
+      <div class="col-md-12 text-center">
+        <h1 class="mb-5 p-0">About Me</h1>
+      </div>
+      <div class="col-md-4">
+        <div class="my-photo m-auto rounded-circle"></div>
+        <div class="text-center m-3">
+          <a href="/about.html#contact" class="contact-link">Contact me</a>
         </div>
       </div>
-      <div class="col-7">
-        <h1>Hi, my name is Aileen Chan Miranda.</h1>
-        <p>I'm a Frontend Developer based in NYC. Originally from Puerto Rico, I moved to NY in 2006 to study Fashion Design and since, I've had the privilege to work with brands like JCPenney, Liz Claiborne & Talbots.</p>
-        <p>My interest in fashion and technology has led me to pursue learning frontend development by gaining skills in HTML, CSS, JavaScript,  React & Responsive Web Design. I'm driven by curiosity in technology and how user-centered applications help businesses thrive and impact the world in a positive way!</p>
-        <div class="links">
-          <a href="/work.html" class="primary-link">See my work <i class="fas fa-arrow-right"></i></a>
+      <div class="col-md-8 text-start">
+        <h2 class="mb-4">Hi, my name is Aileen Chan Miranda.</h2>
+        <p class="mb-4 pe-5">I'm a Frontend Developer based in NYC. Originally from Puerto Rico, I moved to NY in 2006 to study Fashion Design and since, I've had the privilege to work with brands like JCPenney, Liz Claiborne & Talbots.</p>
+        <p class="mb-4 pe-5">My interest in fashion and technology has led me to pursue learning frontend development by gaining skills in HTML, CSS, JavaScript,  React & Responsive Web Design. I'm driven by curiosity in technology and how user-centered applications help businesses thrive and impact the world in a positive way!</p>
+        <div class="links mt-5">
+          <a href="/work.html" class="primary-link ms-0">See my work <i class="fas fa-arrow-right"></i></a>
           <a href="/about.html#qualifications" class="secondary-link">My qualifications <i class="fas fa-arrow-right"></i></a>
         </div>
       </div>
-     </div> <!-- About-hero content ends -->
-    <hr />
+    </div> <!-- About-hero content ends -->
     <div class="skills" id="qualifications">
-      <div class="row tech-stack">
-        <h3>Tech Stack:</h3>
+      <hr />
+      <div class="row m-5 tech-stack">
+        <h3 class="mb-4 mt-3">Tech Stack:</h3>
         <ul>
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Bootstrap</li>
-          <li>HTML5</li>
-          <li>CSS3</li>
-          <li>Git & GitHub</li>
-          <li>Netlify</li>
-          <li>VS Code</li>
+          <li class="d-inline-block pe-3 border-2 border-end">JavaScript</li>
+          <li class="d-inline-block ps-3 pe-3 border-2 border-end">React</li>
+          <li class="d-inline-block ps-3 pe-3 border-2 border-end">Bootstrap</li>
+          <li class="d-inline-block ps-3 pe-3 border-2 border-end">HTML5</li>
+          <li class="d-inline-block ps-3 pe-3 border-2 border-end">CSS3</li>
+          <li class="d-inline-block ps-3 pe-3 border-2 border-end">Git & GitHub</li>
+          <li class="d-inline-block ps-3 pe-3 border-2 border-end">Netlify</li>
+          <li class="d-inline-block ps-3">VS Code</li>
         </ul>
       </div> <!-- Tech Stack content ends -->
       <hr />
-      <div class="row design-skills">
-        <h3>Design Skills:</h3>
+      <div class="row m-5 design-skills">
+        <h3 class="mb-4 mt-3">Design Skills:</h3>
         <ul>
-          <li>Invision Freehand</li>
-          <li>Adobe Photoshop</li>
-          <li>Adobe Illustrator</li>
-          <li>Low Fidelity Wireframe</li>
-           <li>Responsive Web Design</li>
+          <li class="d-inline-block pe-3 border-2 border-end">Invision Freehand</li>
+          <li class="d-inline-block ps-3 pe-3 border-2 border-end">Adobe Photoshop</li>
+          <li class="d-inline-block ps-3 pe-3 border-2 border-end">Adobe Illustrator</li>
+          <li class="d-inline-block ps-3 pe-3 border-2 border-end">Low Fidelity Wireframe</li>
+          <li class="d-inline-block ps-3">Responsive Web Design</li>
         </ul>
       </div> <!-- Design Skills content ends -->
       <hr />
-      <div class="row certifications">
-        <h3>Certifications:</h3>
+      <div class="row m-5 certifications">
+        <h3 class="mb-4 mt-3">Certifications:</h3>
         <div class="col certificate">
           <img src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/031/324/original/result.png?1622574640" alt="" />
         </div>
@@ -74,24 +77,24 @@
         </div>
       </div> <!-- Certifications content ends -->
     </div> <!-- Qualifications content ends -->
-    <div class="row footer">
-      <div class="contact" id="contact">
-        <h3>Contact me!</h3>
+    <div class="row footer text-center justify-content-center align-items-center">
+      <div class="col-md-12 mt-5 mb-4 contact" id="contact">
+        <h3 class="mb-2">Contact me!</h3>
         <a href="mailto:aileenchany@gmail.com">aileenchany@gmail.com</a>
-        <h3>Let's connect!</h3>
+        <h3 class="mt-5 mb-2">Let's connect!</h3>
         <p>Follow me on social media.</p>
-        <ul class="social-media-links">
-          <li>
+        <ul class="social-media-links mt-4 mb-0 p-0">
+          <li class="d-inline-block ps-0 pe-4">
             <a href="https://www.instagram.com/porto_caribe/" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
           </li>
-          <li>
+          <li class="d-inline-block ps-4 pe-4">
             <a href="https://github.com/aileenchany" target="_blank">
               <i class="fab fa-github"></i>
             </a>
           </li>
-          <li>
+          <li class="d-inline-block ps-4 pe-0">
             <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
             </a>
@@ -99,14 +102,17 @@
         </ul>
       </div> <!-- Contact "me" content ends -->
       <div class="foot-note">
-        <a href="" target="_blank">ACM</a> 
+        <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank" class="fw-bold">ACM</a> 
         2021 | 
-        <a href="" target="_blank">GitHub</a> 
+        <a href="https://github.com/aileenchany/acm-portfolio-project" target="_blank" class="fw-bold">GitHub</a> 
         Open-Sourced | Hosted on 
-        <a href="" target="_blank">Netlify</a>
+        <a href="https://affectionate-benz-03cce0.netlify.app/" target="_blank" class="fw-bold">Netlify</a>
         <br/>
         <br/>
-        <a href="/">Back to Main</a>
+        <a href="/homepage.html" class="fw-bold">Back to Homepage</a>
+        <br/>
+        <br/>
+        <a href="#top" class="fw-bold">Back to Top</a>
         <br/>
         <br/>
       </div> <!-- Foot-note content ends -->
