--- a/index.html
+++ b/index.html
@@ -5,28 +5,94 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="ACM's - Aileen Chan Miranda - Front End Developer Portfolio">
-  <title>ACM - Front End Developer Portfolio | Aileen Chan Miranda</title>
+  <title>ACM - Front End Developer Portfolio | Homepage</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/src/styles.css" />
   <script src="https://kit.fontawesome.com/5b97558d7e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="container main">
-    <div class="row half-dark">
-      <h1 class="heading-dark">ACM</h1>
-    </div>
-    <div class="enter">
-      <a href="/homepage.html">
-        ENTER
-        <i class="fas fa-arrow-right"></i>
-      </a>
-    </div>
-    <div class="row half-light">
-      <h1 class="heading-light">ACM</h1>
-    </div>
+  <div class="container">
+    <nav class="d-flex justify-content-between"  id="top">
+      <p class="logo">ACM</p>
+      <ul>
+        <li class="active">
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/about.html">About</a>
+        </li>
+        <li>
+          <a href="/about.html#qualifications">Skills</a>
+        </li>
+        <li>
+          <a href="/work.html">Work</a>
+        </li>
+        <li>
+          <a href="/contact.html">Contact</a>
+        </li>
+      </ul>
+    </nav>
   </div>
+  <div class="container-fluid">
+    <div class="row hero">
+      <div class="col-md">
+        <p>Hi, I am</p>
+        <h1>ACM</h1>
+        <h2>Front End Developer based in NYC.</h2>
+        <div class="links">
+          <a href="#contact" class="primary-link" >Contact me <i class="fas fa-arrow-right"></i></a>
+          <a href="/about.html" class="secondary-link" >About me <i class="fas fa-arrow-right"></i></a>
+        </div>
+      </div>
+    </div> <!-- Hero content ends -->
+    <div class="shape-divider">  <!-- Waves shape divider - See CSS for info -->
+      <div class="custom-shape-divider-top-1628184011">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+            <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+            <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+        </svg>
+      </div>
+    </div>
+    <div class="row footer text-center justify-content-center align-items-center">
+      <div class="col-md-12 mt-5 mb-4 contact" id="contact">
+        <h3 class="mb-2">Contact me!</h3>
+        <a href="mailto:aileenchany@gmail.com">aileenchany@gmail.com</a>
+        <h3 class="mt-5 mb-2">Let's connect!</h3>
+        <p>Follow me on social media.</p>
+        <ul class="social-media-links mt-4 mb-0 p-0">
+          <li class="d-inline-block ps-0 pe-4">
+            <a href="https://www.instagram.com/porto_caribe/" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li class="d-inline-block ps-4 pe-4">
+            <a href="https://github.com/aileenchany" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li class="d-inline-block ps-4 pe-0">
+            <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+        </ul>
+      </div> <!-- Contact "me" content ends -->
+      <div class="foot-note">
+        <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank" class="fw-bold">ACM</a> 
+        2021 | 
+        <a href="https://github.com/aileenchany/acm-portfolio-project" target="_blank" class="fw-bold">GitHub</a> 
+        Open-Sourced | Hosted on 
+        <a href="https://affectionate-benz-03cce0.netlify.app/" target="_blank" class="fw-bold">Netlify</a>
+        <br/>
+        <br/>
+        <a href="#top" class="top fw-bold">Back to Top</a>
+        <br/>
+        <br/>
+      </div> <!-- Foot-note content ends -->
+    </div> <!-- Footer content ends -->
+  </div> <!-- Homepage container ends -->
 </body>
 </html>
