Reorganized work page html and css

--- a/work.html
+++ b/work.html
@@ -38,44 +38,48 @@
   <div class="container-fluid text-end" id="top">
     <div class="work">
       <div class="row mt-5 mb-4 justify-content-center">
-        <h1 class="text-center fw-bold pb-4">Front End Projects</h1>
+        <h1 class="text-center pb-4">Take a look at my current projects!</h1>
       </div>
       <div class="row mt-3 mb-3 justify-content-center"> <!-- React Weather App Project Content -->
-        <div class="col-md-6 m-3 rounded project project-1">
+        <div class="col-md-4 m-3 rounded project project-1">
           <!-- Project image -->
         </div>
-        <div class="col-md-6 m-3 rounded bg-color">
-          <h3 class="p-3">React Weather App</h3>
-          <p class="pe-3 ps-5">
-            A 5-day weather forecast application built with React JSX, HTML and CSS. The user can search for any city and the search triggers 
-            an Ajax call to the Open Weather API which returns formatted data in the form of a JSON file. The app then collects the weather data, stores it internally and 
-            displays it through the UI components. By applying the React Hook, useState, the user is able to switch between °F & °C temperatures. Lastly, 
-            by using Geolocation, we allow the user to see the weather conditions in their current location. 
+        <div class="col-md-4 m-3 p-5 rounded bg-color">
+          <h2 class="mb-4 text-start">React Weather App</h2>
+          <p class="text-start">
+            Weather forecast application built with <strong>React JS, HTML and CSS</strong> with the use of Open Weather API. By applying the React Hook, useState, the user is able to switch between °F & °C temperatures. Lastly, by using Geolocation, we allow the user to see the weather conditions in their current location. 
           </p>
           <div class="links mt-5">
-            <a href="" class="primary-link ms-0">Launch this app</a>
-            <a href="" class="secondary-link">See my code</a>
+            <a href="https://eager-nobel-336695.netlify.app/" target="_blank" class="secondary-link">Launch App</a>
           </div>
         </div>
       </div>
       <div class="row mt-3 mb-3 justify-content-center"> <!-- React Dictionary Project Content -->
-        <div class="col-md-6 m-3 rounded project project-2">
-          <!-- Project image -->
+        <div class="col-md-4 m-3 p-5 rounded bg-color">
+          <h2 class="mb-4 text-start">React Dictionary</h2>
+          <p class="text-start">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <div class="links mt-5">
+            <a href="https://heuristic-liskov-6e075b.netlify.app/" target="_blank" class="secondary-link">Launch App</a>
+          </div>
         </div>
-        <div class="col-md-6 m-3 rounded bg-color">
-          <h3 class="p-3">React Dictionary</h3>
-          <p class="pe-3 ps-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <h4 class="p-3">Built with:</h4>
+        <div class="col-md-4 m-3 rounded project project-2">
+          <!-- Project image -->
         </div>
       </div>
       <div class="row mt-3 mb-3 justify-content-center"> <!-- Porto Caribe Project Content -->
-        <div class="col-md-6 m-3 rounded project project-3">
+        <div class="col-md-4 m-3 rounded project project-3">
           <!-- Project image -->
         </div>
-        <div class="col-md-6 m-3 rounded bg-color">
-          <h3 class="p-3">Porto Caribe</h3>
-          <p class="pe-3 ps-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <h4 class="p-3">Built with:</h4>
+        <div class="col-md-4 m-3 p-5 rounded bg-color">
+          <h2 class="mb-4 text-start">Porto Caribe</h2>
+          <p class="text-start">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <div class="links mt-5">
+            <a href="https://wonderful-lovelace-54f247.netlify.app/" target="_blank" class="secondary-link">Launch App</a>
+          </div>
         </div>
       </div>
     </div>
