Added project description content

--- a/work.html
+++ b/work.html
@@ -58,7 +58,7 @@
         <div class="col-md-4 m-3 p-5 rounded bg-color">
           <h2 class="mb-4 text-start">React Dictionary</h2>
           <p class="text-start">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Dictionary application built with <strong>React JS, HTML and CSS</strong>. Through implementation of both, Dictionary & Pexels REST API'S, the user can search for a word's definition, synonyms & related images simultaneously. Finally, with React Hook "useState", the user can switch between "puppy" & "kitty" themes.
           </p>
           <div class="links mt-5">
             <a href="https://heuristic-liskov-6e075b.netlify.app/" target="_blank" class="secondary-link">Launch App</a>
@@ -75,7 +75,7 @@
         <div class="col-md-4 m-3 p-5 rounded bg-color">
           <h2 class="mb-4 text-start">Porto Caribe</h2>
           <p class="text-start">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Porto Caribe is a single page travel blog that higlights new and exciting spots in the Puerto Rican West Coast. Known for its beautful sunsets and beaches, the West Coast offers locals, travelers, and visitors alike an abundance of activities from places to stay, discover and feast to your heart's content! Built with <strong>HTML5, CSS3 & Vanilla JS</strong>. 
           </p>
           <div class="links mt-5">
             <a href="https://wonderful-lovelace-54f247.netlify.app/" target="_blank" class="secondary-link">Launch App</a>
