--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@
         <div class="col-md-4 m-3 rounded project project-1">
           <!-- Project image -->
         </div>
-        <div class="col-md-4 m-3 p-5 rounded bg-color">
+        <div class="col-md-4 m-3 p-5 rounded bg-color project-content">
           <h2 class="mb-4 text-start">React Weather App</h2>
           <p class="text-start">
             Weather forecast application built with <strong>React JS, HTML and CSS</strong> with the use of Open Weather API. By applying the React Hook, useState, the user is able to switch between °F & °C temperatures. Lastly, by using Geolocation, we allow the user to see the weather conditions in their current location. 
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div class="row mt-3 mb-3 justify-content-center"> <!-- React Dictionary Project Content -->
-        <div class="col-md-4 m-3 p-5 rounded bg-color">
+        <div class="col-md-4 m-3 p-5 rounded bg-color project-content">
           <h2 class="mb-4 text-start">React Dictionary</h2>
           <p class="text-start">
             Dictionary application built with <strong>React JS, HTML and CSS</strong>. Through implementation of both, Dictionary & Pexels REST API'S, the user can search for a word's definition, synonyms & related images simultaneously. Finally, with React Hook "useState", the user can switch between "puppy" & "kitty" themes.
@@ -72,7 +72,7 @@
         <div class="col-md-4 m-3 rounded project project-3">
           <!-- Project image -->
         </div>
-        <div class="col-md-4 m-3 p-5 rounded bg-color">
+        <div class="col-md-4 m-3 p-5 rounded bg-color project-content">
           <h2 class="mb-4 text-start">Porto Caribe</h2>
           <p class="text-start">
             Porto Caribe is a single page travel blog that higlights new and exciting spots in the Puerto Rican West Coast. Known for its beautful sunsets and beaches, the West Coast offers locals, travelers, and visitors alike an abundance of activities from places to stay, discover and feast to your heart's content! Built with <strong>HTML5, CSS3 & Vanilla JS</strong>. 
