Added SEO friendly content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="ACM's - Aileen Chan Miranda - Front End Developer Portfolio">
+  <meta name="description" content="Welcome to ACM's portfolio! Aileen Chan Miranda is a Front End Developer based in NYC.">
   <title>ACM - Front End Developer Portfolio | Homepage</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,22 +15,24 @@
 <body>
   <div class="container">
     <nav class="d-flex justify-content-between"  id="top">
-      <p class="logo">ACM</p>
+      <p class="logo">
+        <a href="/" title="Back to Homepage">ACM</a>
+      </p>
       <ul>
         <li class="active">
-          <a href="/">Home</a>
+          <a href="/" title="Homepage">Home</a>
         </li>
         <li>
-          <a href="/about.html">About</a>
+          <a href="/about.html" title="About Me">About</a>
         </li>
         <li>
-          <a href="/about.html#qualifications">Skills</a>
+          <a href="/about.html#qualifications" title="My Qualifications">Skills</a>
         </li>
         <li>
-          <a href="/work.html">Work</a>
+          <a href="/work.html" title="My Work">Work</a>
         </li>
         <li>
-          <a href="/contact.html">Contact</a>
+          <a href="/contact.html" title="Contact Me">Contact</a>
         </li>
       </ul>
     </nav>
@@ -64,17 +66,17 @@
         <p>Follow me on social media.</p>
         <ul class="social-media-links mt-4 mb-0 p-0">
           <li class="d-inline-block ps-0 pe-4">
-            <a href="https://www.instagram.com/porto_caribe/" target="_blank">
+            <a href="https://www.instagram.com/porto_caribe/" target="_blank" title="Instagram">
               <i class="fab fa-instagram"></i>
             </a>
           </li>
           <li class="d-inline-block ps-4 pe-4">
-            <a href="https://github.com/aileenchany" target="_blank">
+            <a href="https://github.com/aileenchany" target="_blank" title="GitHub">
               <i class="fab fa-github"></i>
             </a>
           </li>
           <li class="d-inline-block ps-4 pe-0">
-            <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank">
+            <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank" title="LinkedIn">
               <i class="fab fa-linkedin-in"></i>
             </a>
           </li>
