--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="ACM's - Aileen Chan Miranda - Front End Developer Portfolio">
-  <title>ACM - Front End Developer Portfolio | About Me Page</title>
+  <meta name="description" content="Aileen Chan Miranda is a Front End Developer with certificates in React Development, Vanilla JS Development, and Responsive Web Design.">
+  <title>ACM - Front End Developer Portfolio | About Page</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -15,22 +15,24 @@
 <body>
   <div class="container">
     <nav class="d-flex justify-content-between"  id="top">
-      <p class="logo">ACM</p>
+      <p class="logo">
+        <a href="/" title="Back to Homepage">ACM</a>
+      </p>
       <ul>
         <li>
-          <a href="/">Home</a>
+          <a href="/" title="Homepage">Home</a>
         </li>
         <li class="active">
-          <a href="/about.html">About</a>
+          <a href="/about.html" title="About Me">About</a>
         </li>
         <li>
-          <a href="/about.html#qualifications">Skills</a>
+          <a href="/about.html#qualifications" title="'My Qualifications">Skills</a>
         </li>
         <li>
-          <a href="/work.html">Work</a>
+          <a href="/work.html" title="My Work">Work</a>
         </li>
         <li>
-          <a href="/contact.html">Contact</a>
+          <a href="/contact.html" title="Contact Me">Contact</a>
         </li>
       </ul>
     </nav>
@@ -83,16 +85,16 @@
       <div class="row m-5 certifications">
         <h3 class="mb-4 mt-3">Certifications:</h3>
         <div class="col certificate">
-          <img src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/031/324/original/result.png?1622574640" alt="" />
+          <img src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/031/324/original/result.png?1622574640" alt="React Development Certificate" />
         </div>
         <div class="col certificate">
-          <img src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/024/145/original/result.png?1618178743" alt="" />
+          <img src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/024/145/original/result.png?1618178743" alt="Front End Development Certificate" />
         </div>
         <div class="col certificate">
-          <img src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/022/177/original/result.png?1610737752" alt="" />
+          <img src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/022/177/original/result.png?1610737752" alt="Introduction To Coding Certificate" />
         </div>
         <div class="col certificate coming-soon">
-          <img src="images/coming-soon.png" alt="" />
+          <img src="images/coming-soon.png" alt="Responsive Web Design Certificate" />
         </div>
       </div> <!-- Certifications content ends -->
     </div> <!-- Qualifications content ends -->
@@ -108,22 +110,22 @@
     <div class="row footer text-center justify-content-center align-items-center">
       <div class="col-md-12 mt-5 mb-4 contact" id="contact">
         <h3 class="mb-2">Contact me!</h3>
-        <a href="mailto:aileenchany@gmail.com">aileenchany@gmail.com</a>
+        <a href="mailto:aileenchany@gmail.com" title="My Email">aileenchany@gmail.com</a>
         <h3 class="mt-5 mb-2">Let's connect!</h3>
         <p>Follow me on social media.</p>
         <ul class="social-media-links mt-4 mb-0 p-0">
           <li class="d-inline-block ps-0 pe-4">
-            <a href="https://www.instagram.com/porto_caribe/" target="_blank">
+            <a href="https://www.instagram.com/porto_caribe/" target="_blank" title="Instagram">
               <i class="fab fa-instagram"></i>
             </a>
           </li>
           <li class="d-inline-block ps-4 pe-4">
-            <a href="https://github.com/aileenchany" target="_blank">
+            <a href="https://github.com/aileenchany" target="_blank" title="GitHub">
               <i class="fab fa-github"></i>
             </a>
           </li>
           <li class="d-inline-block ps-4 pe-0">
-            <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank">
+            <a href="https://www.linkedin.com/in/aileen-chanmiranda/" target="_blank" title="LinkedIn">
               <i class="fab fa-linkedin-in"></i>
             </a>
           </li>
