--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="ACM's - Aileen Chan Miranda - Front End Developer Portfolio">
-  <title>ACM - Front End Developer Portfolio | My Contact Page</title>
+  <meta name="description" content="Need help bringing your ideas to life? Contact ACM through email or LinkedIn.">
+  <title>ACM - Front End Developer Portfolio | Contact Page</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -15,22 +15,24 @@
 <body>
   <div class="container">
     <nav class="d-flex justify-content-between"  id="top">
-      <p class="logo">ACM</p>
+      <p class="logo">
+        <a href="/" title="Back to Homepage">ACM</a>
+      </p>
       <ul>
         <li>
-          <a href="/">Home</a>
+          <a href="/" title="Homepage">Home</a>
         </li>
         <li>
-          <a href="/about.html">About</a>
+          <a href="/about.html" title="About Me">About</a>
         </li>
         <li>
-          <a href="/about.html#qualifications">Skills</a>
+          <a href="/about.html#qualifications" title="My Qualifications">Skills</a>
         </li>
         <li>
-          <a href="/work.html">Work</a>
+          <a href="/work.html" title="My Work">Work</a>
         </li>
         <li class="active">
-          <a href="/contact.html">Contact</a>
+          <a href="/contact.html" title="Contact Me">Contact</a>
         </li>
       </ul>
     </nav>
