Adding mobile media queries

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <li class="active">
           <a href="/about.html" title="About Me">About</a>
         </li>
-        <li>
+        <li class="d-none d-sm-block">
           <a href="/about.html#qualifications" title="'My Qualifications">Skills</a>
         </li>
         <li>
@@ -45,18 +45,19 @@
           <a href="/about.html#contact" class="contact-link">Contact me</a>
         </div>
       </div>
-      <div class="col-md-8 text-start">
+      <div class="col-md-8">
         <h2 class="mb-4 p-0">About Me</h2>
         <h1 class="mb-4">Hi, my name is Aileen Chan Miranda.</h1>
-        <p class="mb-4 pe-5">I'm a Frontend Developer based in NYC. Originally from Puerto Rico, I moved to NY in 2006 to study Fashion Design at FIT and since, I've had the privilege to work with companies like JCPenney, Liz Claiborne & Talbots.</p>
-        <p class="mb-4 pe-5">My interest in fashion and technology has led me to pursue learning Front End Development by gaining skills in HTML, CSS, JavaScript,  React & Responsive Web Design. I'm driven by curiosity in technology and how user-centered applications help businesses thrive and impact the world in a positive way!</p>
+        <p class="mb-4">I'm a Frontend Developer based in NYC. Originally from Puerto Rico, I moved to NY in 2006 to study Fashion Design at FIT and since, I've had the privilege to work with companies like JCPenney, Liz Claiborne & Talbots.</p>
+        <p class="mb-4">My interest in fashion and technology has led me to pursue learning Front End Development by gaining skills in HTML, CSS, JavaScript,  React & Responsive Web Design. I'm driven by curiosity in technology and how user-centered applications help businesses thrive and impact the world in a positive way!</p>
         <div class="links mt-5">
-          <a href="/work.html" class="primary-link ms-0">See my work <i class="fas fa-arrow-right"></i></a>
-          <a href="/about.html#qualifications" class="secondary-link">My qualifications <i class="fas fa-arrow-right"></i></a>
+          <a href="/work.html" class="primary-link">My Work <i class="fas fa-arrow-right"></i></a>
+          <a href="/about.html#qualifications" class="secondary-link">My Skills <i class="fas fa-arrow-right"></i></a>
         </div>
       </div>
     </div> <!-- About-hero content ends -->
     <div class="skills" id="qualifications">
+      <hr />
       <div class="row m-5 tech-stack">
         <h3 class="mb-4 mt-3">Tech Stack:</h3>
         <ul>
@@ -139,7 +140,7 @@
         <a href="https://affectionate-benz-03cce0.netlify.app/" target="_blank" class="fw-bold">Netlify</a>
         <br/>
         <br/>
-        <a href="#top" class="top fw-bold">Back to Top</a>
+        <a href="#top" class="top d-none d-sm-block fw-bold">Back to Top</a>
         <br/>
         <br/>
       </div> <!-- Foot-note content ends -->
