--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <li>
           <a href="/about.html" title="About Me">About</a>
         </li>
-        <li>
+        <li class="d-none d-sm-block">
           <a href="/about.html#qualifications" title="My Qualifications">Skills</a>
         </li>
         <li>
@@ -81,7 +81,7 @@
           Open-Sourced | Hosted on 
           <a href="https://affectionate-benz-03cce0.netlify.app/" target="_blank" class="fw-bold">Netlify</a>
         </p>
-        <a href="/" class="top fw-bold">Back to Homepage</a>
+        <a href="/" class="top d-none d-sm-block fw-bold">Back to Homepage</a>
       </div> <!-- Footer content ends -->
     </div> <!-- Contact content ends -->
   </div> <!-- Contact Container content ends-->
