--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="container">
-    <nav class="d-flex justify-content-between"  id="top">
+    <nav class="d-flex"  id="top">
       <p class="logo">
         <a href="/" title="Back to Homepage">ACM</a>
       </p>
@@ -25,7 +25,7 @@
         <li>
           <a href="/about.html" title="About Me">About</a>
         </li>
-        <li>
+        <li class="d-none d-sm-block">
           <a href="/about.html#qualifications" title="My Qualifications">Skills</a>
         </li>
         <li>
@@ -44,8 +44,8 @@
         <h1>ACM</h1>
         <h2>Front End Developer based in NYC.</h2>
         <div class="links">
-          <a href="#contact" class="primary-link" >Contact me <i class="fas fa-arrow-right"></i></a>
-          <a href="/about.html" class="secondary-link" >About me <i class="fas fa-arrow-right"></i></a>
+          <a href="#contact" class="primary-link" >Contact Me <i class="fas fa-arrow-right"></i></a>
+          <a href="/about.html" class="secondary-link" >About Me <i class="fas fa-arrow-right"></i></a>
         </div>
       </div>
     </div> <!-- Hero content ends -->
@@ -90,7 +90,7 @@
         <a href="https://affectionate-benz-03cce0.netlify.app/" target="_blank" class="fw-bold">Netlify</a>
         <br/>
         <br/>
-        <a href="#top" class="top fw-bold">Back to Top</a>
+        <a href="#top" class="top d-none d-sm-block fw-bold">Back to Top</a>
         <br/>
         <br/>
       </div> <!-- Foot-note content ends -->
