--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
         <li>
           <a href="/about.html" title="About Me">About</a>
         </li>
-        <li>
+        <li class="d-none d-sm-block">
           <a href="/about.html#qualifications" title="My Qualifications">Skills</a>
         </li>
         <li class="active">
@@ -43,7 +43,7 @@
         <h1 class="text-center pb-4">Take a look at my current projects!</h1>
       </div>
       <div class="row mt-3 mb-3 justify-content-center"> <!-- React Weather App Project Content -->
-        <div class="col-md-4 m-3 rounded project project-1">
+        <div class="col-md-4 d-none d-sm-block m-3 rounded project project-1">
           <!-- Project image -->
         </div>
         <div class="col-md-4 m-3 p-5 rounded bg-color project-content">
@@ -66,12 +66,12 @@
             <a href="https://heuristic-liskov-6e075b.netlify.app/" target="_blank" class="secondary-link">Launch App</a>
           </div>
         </div>
-        <div class="col-md-4 m-3 rounded project project-2">
+        <div class="col-md-4 d-none d-sm-block m-3 rounded project project-2">
           <!-- Project image -->
         </div>
       </div>
       <div class="row mt-3 mb-3 justify-content-center"> <!-- Porto Caribe Project Content -->
-        <div class="col-md-4 m-3 rounded project project-3">
+        <div class="col-md-4 d-none d-sm-block m-3 rounded project project-3">
           <!-- Project image -->
         </div>
         <div class="col-md-4 m-3 p-5 rounded bg-color project-content">
@@ -126,7 +126,7 @@
         <a href="https://affectionate-benz-03cce0.netlify.app/" target="_blank" class="fw-bold">Netlify</a>
         <br/>
         <br/>
-        <a href="#top" class="top fw-bold">Back to Top</a>
+        <a href="#top" class="top d-none d-sm-block fw-bold">Back to Top</a>
         <br/>
         <br/>
       </div> <!-- Foot-note content ends -->
