--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <li class="active">
           <a href="/about.html" title="About Me">About</a>
         </li>
-        <li class="d-none d-sm-block">
+        <li class="hidden">
           <a href="/about.html#qualifications" title="'My Qualifications">Skills</a>
         </li>
         <li>
@@ -39,7 +39,7 @@
   </div>
   <div class="container-fluid">
     <div class="row about-hero justify-content-center align-items-center">
-      <div class="col-md-4">
+      <div class="col-md-4 hidden">
         <div class="my-photo m-auto rounded-circle"></div>
         <div class="text-center m-3">
           <a href="/about.html#contact" class="contact-link">Contact me</a>
@@ -56,8 +56,8 @@
         </div>
       </div>
     </div> <!-- About-hero content ends -->
-    <div class="skills" id="qualifications">
-      <hr />
+    <div class="skills" id="qualifications">  
+      <hr class="hidden"/>
       <div class="row m-5 tech-stack">
         <h3 class="mb-4 mt-3">Tech Stack:</h3>
         <ul>
@@ -71,7 +71,7 @@
           <li class="d-inline-block ps-3">VS Code</li>
         </ul>
       </div> <!-- Tech Stack content ends -->
-      <hr />
+      <hr class="hidden"/>
       <div class="row m-5 design-skills">
         <h3 class="mb-4 mt-3">Design Skills:</h3>
         <ul>
@@ -82,7 +82,7 @@
           <li class="d-inline-block ps-3">Responsive Web Design</li>
         </ul>
       </div> <!-- Design Skills content ends -->
-      <hr />
+      <hr class="hidden"/>
       <div class="row m-5 certifications">
         <h3 class="mb-4 mt-3">Certifications:</h3>
         <div class="col certificate">
