--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li>
           <a href="/about.html" title="About Me">About</a>
         </li>
-        <li class="d-none d-sm-block">
+        <li class="hidden">
           <a href="/about.html#qualifications" title="My Qualifications">Skills</a>
         </li>
         <li>
