Updated missing certificate

--- a/about.html
+++ b/about.html
@@ -94,8 +94,8 @@
         <div class="col certificate">
           <img src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/022/177/original/result.png?1610737752" alt="Introduction To Coding Certificate" />
         </div>
-        <div class="col certificate coming-soon">
-          <img src="images/coming-soon.png" alt="Responsive Web Design Certificate" />
+        <div class="col certificate">
+          <img src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/035/837/original/result.png?1628536091" alt="Responsive Web Design Certificate" />
         </div>
       </div> <!-- Certifications content ends -->
     </div> <!-- Qualifications content ends -->
